css/main.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500;800&display=swap');
/* @import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap'); */
@font-face {
    font-family: 'hakubo_free_trialregular';
    src: url('fonts/Hakubo/hakubo_free_trial-webfont.woff2') format('woff2'),
         url('fonts/Hakubo/hakubo_free_trial-webfont.woff') format('woff');
    font-weight: normal;
    font-style: normal;

}
@font-face {
    font-family: 'heavitasregular';
    src: url('fonts/Heavitas/heavitas-webfont.woff2') format('woff2'),
         url('fonts/Heavitas/heavitas-webfont.woff') format('woff');
    font-weight: normal;
    font-style: normal;
}

:root {
    --color-1: #841d40;
    --color-2:#002e55;
}

#logo {
    padding: 0 0 0 15px;
    width: 150px;
    height: 75px; 
}
html {
    max-width: 100%;
    font-family: 'Montserrat', sans-serif;
}
body {
    background-color: #ececec;
}
a {
    text-decoration: none;
    color: #000;
}
nav{
  display: flex;
  height: 90px;
  width: 100%;
  background: var(--color-1);;
  align-items: center;
  justify-content: space-between;
  padding: 0px;
  
  flex-wrap: wrap;
}
nav .logo{
    color: #fff;
    font-weight: 600;
}
nav ul{
  display: flex;
  flex-wrap: wrap;
  list-style: none;
}
nav ul li{
  margin: 0 5px;
}
nav ul li a{
  color: #f2f2f2;
  text-decoration: none;
  font-size: 18px;
  font-weight: 500;
  padding: 8px 15px;
  border-radius: 5px;
  letter-spacing: 1px;
  transition: all 0.3s ease;; 
}
nav ul li a.active,
nav ul li a:hover{
  color: #fff;
  background:var(--color-2);
}
nav .menu-btn i{
    max-width: 100%;
  color: #fff;
  font-size: 22px;
  cursor: pointer;
  display: none;
}
input[type="checkbox"]{
  display: none;
}
@media (max-width: 768px){
  nav{
      max-width: 100%;
    padding: 0;
  }
}
@media (max-width: 480px){
    nav {
        max-width: 100%;
    }
}
@media (max-width: 920px) {
  nav .menu-btn i{
    display: block;
  }
    #click:checked ~ .menu-btn i:before{
    content: "\f00d";
  }
  nav ul{
    position: fixed;
    top: 70px;
    left: -110%;
    background:rgba(0, 0, 0, 0.95);
    height: 100%;
    width: 100%;
    text-align: center;
    display: block;
    transition: all 0.3s ease;
  }
  @media (max-width: 480px){
    #click:checked ~ ul{
        left: -10%;
      }
  }
  @media (max-width: 768px){
    #click:checked ~ ul{
        left: 0%;
      }
  }
  @media (max-width: 1200px){
      #click:checked ~ ul {
        left: 0%;
      }
  }
  .no-margin {
      margin: 20px 0 0 0 !important;
      padding-left: 0 !important;
  }
  
  nav ul li{
    width: 100%;
    margin: 45px 0px;
  }
  nav ul li a{
    width: 90%;
    margin-left: -90%;
    display: block;
    font-size: 20px;
    font-weight: 700;
    transition: 0.6s cubic-bezier(0.68, -0.55, 0.265, 1.55);
    padding-right: 0px !important;
  }
  #click:checked ~ ul li a{
    margin: auto;
    padding: auto;
  }
  nav ul li a.active,
  nav ul li a:hover{
    background: none;
    color: cyan;
  }
}
.content{
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  text-align: center;
  z-index: -1;
  width: 100%;
  padding: 0 30px;
  color: #1b1b1b;
}
.boton-menu {
    cursor: pointer;
}
.imagen-fondo{
  background-image: url(/img/background-home.webp);
  background-repeat: no-repeat;
  background-position: center center;
  background-size: 100%;
  padding: 20% 20% 5% 5%;
}
.eslogan {
    color: #000;
    font-size: 45px;
    font-weight: 700;
    font-family: 'heavitasregular', sans-serif;
    line-height: 1.6;
}
@media (max-width: 480px){
    .eslogan {
        font-size: 25px;
    }
}
.text__decoration__white {
    color: #fff;
    background: var(--color-2);
    padding: 5px;
    margin: 5px;
}
#caracteristicas {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    gap: 5%;
    margin: 4%;
}
@media (max-width: 480px){
    #caracteristicas {
        grid-template-columns: repeat(1, 1fr);
        padding: 5%;
    }
}
.caracteristicas__seccion svg {
    background-color: #002e55;
    border-radius: 50%;
    padding: 15px;
    display: block;
    margin: 15px auto;

    
}
.caracteristicas__seccion h3 {
    font-size: 24px;
    font-weight: bold;
    margin:15px 0 0 0;
    padding: 0;
    text-align: center;
}
.caracteristicas__seccion p {
    font-size: 16px;
    font-weight: 500;
    margin: 20px 0 0 0;
    line-height: 1.5;
    padding: 0;
    text-align: center;
}
.destacados {
    max-width: 100%;

}
.destacados h4 {
  text-align: center;
  font-size: 40px;
  margin: 4.5% 0 0 0;
}
@media (max-width: 480px){
    .destacados h4 {
      padding: 5% 0 0 0;
      margin-bottom: 5%;
    }
}
.galeria {
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    gap: 3%;
    margin: 0 3%;
    padding: 3%;
}
@media (max-width: 768px){
    .galeria {
        grid-template-columns: repeat(2, 1fr);
    }
}
@media (max-width: 480px){
    .galeria {
        grid-template-columns: repeat(2, 1fr);
    }
}
.galeria div img {
    width: 95%;
    height: auto;
    margin: auto;
    display: flex;
}
.galeria div p {
    text-align: center;
    font-size: 16px;
    font-weight: 700;
    margin: 4%;
    padding: 0%;
}
.galeria div a {
  display: flex;
  color: white;
  background-color: #002e55;
  margin: auto;
  padding: 2%;
  justify-content: center;
  border-radius: 5px;
  max-width: 50%;
  cursor: pointer;
}
#ayuda-para-elegir {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    gap: 3%;
    padding: 3%;
    max-width: 100%;
    background-color: white;
}
@media (max-width: 768px){
    #ayuda-para-elegir {
        grid-template-columns: repeat(1, 1fr);
    }
}
@media (max-width: 480px){
    #ayuda-para-elegir {
        grid-template-columns: repeat(1, 1fr);
    }
}
.boton-titulo h4 {
    font-size: 24px;
    font-weight: bold;
    margin: 15px;
    padding: 0 5% 5% 5%;
    text-align: center;
}
.boton-titulo a {
    background-color: var(--color-1);
    color: #fff;
    padding: 10px;
    margin: auto;
    justify-content: center;
    text-decoration: none;
    border-radius: 5px;
    display: flex;
    transition: all 0.3s ease;
    max-width: 200px;
}
@media (max-width: 480px){
    .boton-titulo a {
        max-width: 85%;
    }
}
.parrafos-x {
    font-size: 18px;
    font-weight: 500;
    margin: 20px 0 0 0;
    line-height: 1.5;
    padding: 0;
    text-align: center;
}
@media (max-width: 480px){
    .parrafos-x {
        font-size: 16px;
    }
}
/* NAVEGACION 2 LINK */
#navegacion-2-link {
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    gap: 3%;
    margin: 0 3%;
    padding: 3%;
    max-width: 100%;
}
.mantente-info h4 {
    font-size: 24px;
    font-weight: bold;
    margin: 0%;
    padding: 0%;
    text-align: left;
}
.mantente-info p {
    font-size: 18px;
    font-weight: 500;
    margin: 20px 0 0 0;
    line-height: 1.6;
    padding: 0;
    text-align: left;
}
.pages-2 {
  display: flex;
  flex-direction: column;
}
.pages-2 h4 {
  font-size: 24px;
  font-weight: bold;
  margin: 0 0 5% 0;
  padding: 0%;
  text-align: center;
}
.pages-2 a {
  margin: 3% 5%;
}
.logo-social-links {
  display: flex;
  flex-direction: column;
}
.social-links {
  display: flex;
  flex-direction: row;
  justify-content: center;
}
.social-links li a {
  text-decoration: none;
  color: black;
}
.logo-social-links li{
  display: flex;
  justify-content: center;
  align-items: center;
  margin: auto;
  padding: 2%;
}
.logo-background {
  display: flex;
  justify-content: center;
  background-color: var(--color-1);
  border-radius: 50%;
  width: 250px;
  height: 250px;
  margin: auto;
  padding: auto;
}
.logo-background img {
  position: relative;
    width: 70%;
    height: 70%;
    margin: auto;
    padding: auto;
    display: flex;
}
.important-links {
  display: flex;
  flex-direction: column;
}
.important-links h4 {
  font-size: 24px;
  font-weight: bold;
  margin: 0 0 5% 0;
  padding: 0%;
  text-align: center;
}
.important-links a {
  margin: 3% 5%;
}

/* WHATSAPP BOTON */
.whatsapp {
  position:fixed;
  width: 65px;
  height: 65px;
  bottom: 40px;
  right: 30px;
  background-color:#25d366;
  color:#FFF;
  border-radius: 50%;
  text-align:center;
  font-size:30px;
  z-index:100;
}
.whatsapp__icon {
  height: 50px;
  width: 50px;
  margin: 9px/*arriba*/9px/*derecha*/ 10px/*abajo*/9px/*izquierda*/;
}

/* FOOTER */
.derechos {
    background-color: var(--color-1);
    color: #fff;
    font-weight: bold;
    display: flex;
    justify-content: space-between;
    padding: 1.5% 5%;
}
@media (max-width: 480px){
    .derechos {
      display: flex;
      flex-direction: column;
      padding: 5% 3%;
      text-align: center;
    }
}
.derechos p a {
    color: #fff;
    text-decoration: none;
}

